# ar_go_ws

./: .gitignore  README.md
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/ocam_publisher/: .catkin  .rosinstall  setup.sh
devel/.private/simple_opencv/: .catkin  .rosinstall  setup.sh
devel/.private/stop_sign_detector/: .catkin  .rosinstall  setup.sh
devel/lib/ocam_publisher/: ocam_publisher
devel/lib/pkgconfig/: ball_detector.pc  catkin_tools_prebuild.pc  ocam_publisher.pc  pid_control.pc  rolling_ball.pc  simple_opencv.pc  stop_sign_detector.pc
devel/lib/rolling_ball/: findCircle
devel/lib/simple_opencv/: simple_node
devel/lib/stop_sign_detector/: stop_sign_detector
devel/share/ball_detector/cmake/: ball_detector-msg-paths.cmake  ball_detectorConfig.cmake
logs/ocam_publisher/: build.cmake.000.log.stderr
logs/simple_opencv/: build.cmake.000.log.stderr
src/ball_detector/: CMakeLists.txt  package.xml
src/ball_detector/src/: test_1
src/ocam_publisher/: CMakeLists.txt
src/ocam_publisher/launch/: ocam_publisher.launch
src/ocam_publisher/src/: ocam_publisher.cpp
src/opencv_tut/: CMakeLists.txt  findCircle  package.xml
src/pid_control/: CMakeLists.txt
src/pid_control/scripts/: expt.py  jk4_stop.py  turtleclass.py  turtledynamics.py
src/rolling_ball/: CMakeLists.txt  mainpage.dox  manifest.xml
src/rolling_ball/scripts/: .rolling_ball.py.swp  rolling_ball.py
src/rolling_ball/src/: findCircle.cpp
src/simple_opencv/: .gitmodules  CMakeLists.txt
src/simple_opencv/src/: simple_node.cpp
src/stop_sign_detector/: CMakeLists.txt
src/stop_sign_detector/launch/: detector.launch
src/stop_sign_detector/scripts/: detector.py  octagon_detector.py  stop_sign_detector.py
src/stop_sign_detector/src/: stop_sign_detector.cpp
(+34 files in other folders)
